added find user by uid api
